# China-Real-Estate_mcp

./: .agentstalk  .gitignore  README.md  pyproject.toml
src/china_real_estate_mcp/: __init__.py  __main__.py  server.py
src/china_real_estate_mcp/data/: city_data.py  construction_costs.py  demographics_data.py
src/china_real_estate_mcp/models/: __init__.py  schemas.py
src/china_real_estate_mcp/tools/: cost_calculator.py  demographics.py  investment_metrics.py  market_analysis.py  policy_risk.py
tests/: test_tools.py
